# tauri-app

./: README.md  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Microsoft.WebView2.FixedVersionRuntime.140.0.3485.54.x64/Trust Protection Lists/Sigma/: Entities  Staging
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  mycustomcmd.rs
