[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon" ,"image-png", "image-ico"] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-serialplugin = "2.19.0"
env_logger = "0.11.8"
log = "0.4"
tauri-plugin-fs = "2.4.2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tokio = { version = "1.47.1", features = ["full"] }
tauri-plugin-store = "2"
tauri-plugin-upload = "2"
tauri-plugin-websocket = "2"
mqtt-protocol-core = { version = "0.7.0", features = ["tracing"] }
uuid = { version = "1.18.1", features = ["v4", "v7"] }
mqtt5 = "0.4.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-window-state = "2"


[dependencies.tauri-plugin-sql]
features = ["sqlite", "mysql"] # or "postgres", or "mysql"
version = "2.0.0"
